# lab6-artem

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  cfg.py  crud.py  database.py  docker-compose.yaml  main.py  models.py  pyproject.toml
templates/: index.html
