[project]
name = "lab6-arteem"
version = "0.1.0"
description = ""
authors = [
    {name = "ybelmach",email = "yaroslav.belmach.wk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg (>=3.2.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
